--- a/dev/scss/sections/_donate.scss
+++ b/dev/scss/sections/_donate.scss
@@ -22,11 +22,12 @@ h1{
 #logo{
     margin: 40px;
 } 
-#social{
+#social2{
     display: flex;
     justify-content: center;
 
     img{
+        padding: 20px;
         margin-bottom: 20px;
     } 
 }
