--- a/dev/scss/sections/_shop.scss
+++ b/dev/scss/sections/_shop.scss
@@ -37,7 +37,7 @@
 
 //-----Artwork-----//
 
-#fullback{
+#fullback2{
     background-color: #A877D0;
     border-radius: 20px;
     padding: 40px;
@@ -50,7 +50,7 @@
 
 
 //-----buttons------//
-    #purple{
+    #purple2{
         background-color: #A877D0;
         color: #F8E5D4;
         padding: 15px;
@@ -58,19 +58,39 @@
 
     }
 
-    #yellow{
+    #yellow2{
         background-color: #F1B458;
         color: #F8E5D4;
         padding: 15px;
         margin: 10px;
     }
-    #green{
+    #green2{
         background-color: #398A5F;
         color: #F8E5D4;
         padding: 15px;
         margin: 10px;
     }
-    #social{
+    #purple3{
+        background-color: #A877D0;
+        color: #F8E5D4;
+        padding: 15px;
+        margin: 10px;
+
+    }
+
+    #yellow3{
+        background-color: #F1B458;
+        color: #F8E5D4;
+        padding: 15px;
+        margin: 10px;
+    }
+    #green3{
+        background-color: #398A5F;
+        color: #F8E5D4;
+        padding: 15px;
+        margin: 10px;
+    }
+    #social3{
         display: flex;
         justify-content: center;
     
