--- a/dev/scss/sections/_events.scss
+++ b/dev/scss/sections/_events.scss
@@ -65,6 +65,7 @@
 
 
                 grid-template-columns: repeat(6 1fr) ;
+                grid-template-rows: auto;
                 grid-template-areas: 
                 "herspaceTop herspaceTop herspaceTop herspaceTop . . "
                 "herspaceTop herspaceTop herspaceTop herspaceTop . . "
