--- a/dev/scss/sections/_events.scss
+++ b/dev/scss/sections/_events.scss
@@ -5,15 +5,15 @@
     >div{
         
         ul {
-            
+            grid-area: ". events .";
             display: grid;
             list-style-type: none;
             width: 100%;
             grid-template-areas: 
-            "#herspaceTop"
-            "#peace"
-            "#letsget"
-            "#herspaceBottom";
+            "herspaceTop"
+            "peace"
+            "letsget"
+            "herspaceBottom";
 
             #herspaceTop{
                 background-color: #A877D0;
@@ -24,7 +24,7 @@
                 text-align: center;
                 box-shadow: #462D5A;
                 border-radius: 20px;
-                
+                grid-area: herspaceTop;
             }
             #letsget{
                 background-color: #F1B458;
@@ -35,7 +35,7 @@
                 text-align: center;
                 box-shadow: #9D7336;
                 border-radius: 20px;
-            
+                grid-area: letsget;
             }
             #peace{
                 background-color: #398A5F;
@@ -46,7 +46,7 @@
                 text-align: center;
                 box-shadow: #276143;
                 border-radius: 20px;
-            
+                grid-area: peace;
             }
             #herspaceBottom{
                 background-color: #EBA5E8;
@@ -57,15 +57,15 @@
                 text-align: center;
                 box-shadow: #7B4F79;
                 border-radius: 20px;
-            
+            grid-area: herspaceBottom;
             }
             
 
             @include md {
 
-
-                grid-template-columns: repeat(6 1fr) ;
-                grid-template-rows: auto;
+                display: grid;
+                grid-template-columns: repeat(6, 1fr) ;
+                grid-template-rows: repeat(8, 1fr);
                 grid-template-areas: 
                 "herspaceTop herspaceTop herspaceTop herspaceTop . . "
                 "herspaceTop herspaceTop herspaceTop herspaceTop . . "
