--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -26,6 +26,7 @@ header {
         @include lg{
             li{
                 padding: 70px;
+                font-size: larger;
             }
         }
 
