--- a/dev/scss/sections/_shop.scss
+++ b/dev/scss/sections/_shop.scss
@@ -16,20 +16,40 @@
                 grid-template-columns: 50% auto;
                 grid-template-areas: 
                 "#piece1 #piece2"
+                "purple2 yellow2"
                 "#piece3 #piece4"
+                "green2 purple3"
                 "#piece5 #piece6"
+                "yellow3 green3"
                 ;
 
                 @include md {
+                    
                     margin: 20px;
                     padding: 20px;
                     grid-template-columns: repeat(3, 1fr) ;
                     grid-template-areas: 
                     "#piece1 #piece2 #piece3"
-                    "#piece4 #piece5 #piece6";
+                    "purple2 yellow2 green2"
+                    "#piece4 #piece5 #piece6"
+                    "purple3 yellow3 green3";
 
 
             }
+            @include lg {
+                    
+                margin: 20px;
+                padding: 20px;
+                grid-template-columns: repeat(3, 1fr) ;
+                grid-template-areas: 
+                "#piece1 #piece2 #piece3"
+                "purple2 yellow2 green2"
+                "#piece4 #piece5 #piece6"
+                "purple3 yellow3 green3";
+
+
+        }
+
 
             }
         
@@ -55,7 +75,7 @@
         color: #F8E5D4;
         padding: 15px;
         margin: 10px;
-
+        grid-area: purple2;
     }
 
     #yellow2{
@@ -63,19 +83,21 @@
         color: #F8E5D4;
         padding: 15px;
         margin: 10px;
+        grid-area: yellow2;
     }
     #green2{
         background-color: #398A5F;
         color: #F8E5D4;
         padding: 15px;
         margin: 10px;
+        grid-area: green2;
     }
     #purple3{
         background-color: #A877D0;
         color: #F8E5D4;
         padding: 15px;
         margin: 10px;
-
+        grid-area: purple3;
     }
 
     #yellow3{
@@ -83,12 +105,14 @@
         color: #F8E5D4;
         padding: 15px;
         margin: 10px;
+        grid-area: yellow3;
     }
     #green3{
         background-color: #398A5F;
         color: #F8E5D4;
         padding: 15px;
         margin: 10px;
+        grid-area: green3;
     }
     #social3{
         display: flex;
