--- a/dev/scss/sections/_shop.scss
+++ b/dev/scss/sections/_shop.scss
@@ -22,7 +22,7 @@
                 "#piece5 #piece6"
                 "yellow3 green3"
                 ;
-
+ 
                 @include md {
                     
                     margin: 20px;
@@ -123,6 +123,10 @@
             margin-bottom: 20px;
             margin-top: 20px;
         } 
+    }
+    h2{
+        padding-top: 20px;
+        color: #F8E5D4;
     }
 
 
