fixing final things
finalizing

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -639,6 +639,7 @@ footer > div #socialfoot ul li a:visited:active {
 #events > div ul #letsget {
   background-color: #F1B458;
   padding: 30px;
+  align-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
   margin-right: 30px;
@@ -650,6 +651,7 @@ footer > div #socialfoot ul li a:visited:active {
 #events > div ul #peace {
   background-color: #398A5F;
   padding: 30px;
+  align-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
   margin-left: 30px;
