--- a/dev/scss/sections/_events.scss
+++ b/dev/scss/sections/_events.scss
@@ -29,6 +29,7 @@
             #letsget{
                 background-color: #F1B458;
                 padding: 30px;
+                align-content: center;
                 margin-top: 20px;
                 margin-bottom: 20px;
                 margin-right: 30px;
@@ -40,6 +41,7 @@
             #peace{
                 background-color: #398A5F;
                 padding: 30px;
+                align-content: center;
                 margin-top: 20px;
                 margin-bottom: 20px;
                 margin-left: 30px;
